src/test/resources/parse-error/undeclared-label.c
int f() {
  int x;
  goto L;
}
